Extbase implemented for the Product Show.html

--- a/packages/laundry_web_app/Resources/Private/Language/locallang_csh_tx_laundrywebapp_domain_model_product.xlf
+++ b/packages/laundry_web_app/Resources/Private/Language/locallang_csh_tx_laundrywebapp_domain_model_product.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="EXT:laundry_web_app/Resources/Private/Language/locallang_csh" date="2019-12-22T02:57:22Z" product-name="laundry_web_app">
+	<file source-language="en" datatype="plaintext" original="EXT:laundry_web_app/Resources/Private/Language/locallang_csh" date="2020-02-10T19:26:46Z" product-name="laundry_web_app">
 		<header/>
 		<body>
 			<trans-unit id="productname.description" resname="productname.description">
@@ -17,6 +17,9 @@
 			</trans-unit>
 			<trans-unit id="pricewhite.description" resname="pricewhite.description">
 				<source>pricewhite</source>
+			</trans-unit>
+			<trans-unit id="image.description" resname="image.description">
+				<source>image</source>
 			</trans-unit>
 		</body>
 	</file>
